# NutsTools

./: .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  requirements.txt  requirements_py311.txt  ruff.toml  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst  requirements.txt
examples/: nuts_code_convert.py  postal_codes.txt  postal_codes_BE.txt  postal_codes_NL.txt  run_all.ps1
src/nutsinfo/: __init__.py  skeleton.py
src/nutstools/: __init__.py  _typings.py  main.py  nutsdata.py  postalnuts.py
tests/: conftest.py  pc2020_BE_NUTS-2021_v1.0_selection.csv  pc2020_NL_NUTS-2021_v2.0_selection.csv  postal_codes_BE_expected.txt  postal_codes_NL_expected.txt  postal_codes_expected.txt  test_nuts.py  test_nuts_command_line_tool.py  test_skeleton.py
